test/files/errors/indexOutOfBounds.jg
_main int ()
{
    content string = "soluce";

    content[10] print;
    0 return;
}